Fri May  7 00:43:44 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* utils/Makefile.am (BuildXLockMenu.1): build and distribute manpage.
	You will need 'pod2man' (from perl 5) to build the manpage, so don't
	edit BuildXLockMenu unless you have perl 5.

Thu May  6 23:14:11 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* libs/Module.h: add fvwm_packet_t type.

1999-05-07  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/events.c (HandleMapRequestKeepRaised):
	(HandleMapNotify): only grab focus for transients when their top window
	is focused

	* fvwm/events.c (HandleMapRequestKeepRaised): another focus fix

	* fvwm/misc.c (Destroy): focus returns to 'parent' of transient windows

	* fvwm/menus.c (MenuInteraction):
	(do_menu):
	(MenuInteraction): fixed destroying in dynamicpopdownaction; fixed a
	bug with 'selectinplace' and multiple recursive submenus with position
	hints (saves some CPU).

	* fvwm/windowlist.c (do_windowList):

	* fvwm/menus.c (FPopupMenu): fixed calling interactive functions in
	dynamic menus

	* fvwm/menus.c (PopDownMenu):
	(FPopupMenu): fixed dynamic 'popup' menus

	* fvwm/functions.c (ExecuteFunction):

	* fvwm/menus.c (FPopupMenu):
	(do_menu):
	(MenuInteraction): fixed position hints with dynamic menus

	* fvwm/menus.c (paint_menu_item):
	(MakeMenu):
	* fvwm/menus.h (MenuRoot): fixed right justification for menu items

1999-05-06  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/menus.c (paint_menu_item): hilight items without a left text too
	(MakeMenu): right menu item text does not draw into submenu triangles
	any more

	* fvwm/menus.c (FPopupMenu): dynamic menus don't need an item initially

	* utils/Makefile.am: make BuildXLockMenu executable

	* configure.in (xpm_problem): removed FvwmAudio Makefile

	* fvwm/menus.c (DestroyMenu): fixed 'recreate'
	(DestroyMenu): fixed memory leak when destroying dynamic menus

	* utils/BuildXLockMenu: applied documentation patch

	* fvwm/windowlist.c (do_windowList):
